--- a/LACrime.Web.Blazor/LACrime.Web.Blazor/LACrimes.Web.Blazor.Server.csproj
+++ b/LACrime.Web.Blazor/LACrime.Web.Blazor/LACrimes.Web.Blazor.Server.csproj
@@ -13,15 +13,16 @@
 
   <ItemGroup>
     <PackageReference Include="CsvHelper" Version="33.0.1" />
+    <ProjectReference Include="..\..\LACrime.Core.Base\LACrime.Core.Base.csproj" />
     <ProjectReference Include="..\..\LACrimes.EF\LACrimes.EF.csproj" />
     <ProjectReference Include="..\LACrime.Web.Blazor.Client\LACrimes.Web.Blazor.Client.csproj" />
-	  <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="9.0.0" />
-	  <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.0">
-	    <PrivateAssets>all</PrivateAssets>
-	    <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-	  </PackageReference>
-	  <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="9.0.0" />
-	  <PackageReference Include="System.Linq.Dynamic.Core" Version="1.4.9" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="9.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="9.0.0" />
+    <PackageReference Include="System.Linq.Dynamic.Core" Version="1.4.9" />
   </ItemGroup>
 
 </Project>
