--- a/LACrime.Web.Blazor/LACrime.Web.Blazor.Client/LACrimes.Web.Blazor.Client.csproj
+++ b/LACrime.Web.Blazor/LACrime.Web.Blazor.Client/LACrimes.Web.Blazor.Client.csproj
@@ -11,7 +11,10 @@
 
   <ItemGroup>
     <PackageReference Include="Blazor.Bootstrap" Version="3.2.0" />
+    <PackageReference Include="Blazored.SessionStorage" Version="2.4.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="9.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="9.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Authentication" Version="9.0.0" />
     <ProjectReference Include="..\..\LACrime.Web.Blazor.Shared\LACrimes.Web.Blazor.Shared.csproj" />
   </ItemGroup>
 
